envoyfilter-teaching/envoyfilter/bootstrap/ef-bootstrap-static-resource-listener-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: ef-bootstrap
spec:
  workloadSelector:
    labels:
      istio: ingressgateway
  configPatches:
  - applyTo: BOOTSTRAP
    patch:
      operation: MERGE
      value:
        static_resources:
          listeners:
          - address:
              socket_address:
                address: 0.0.0.0
                port_value: 12111
            filter_chains:
            - filters:
              -   name: envoy.filters.network.http_connection_manager
                  typedConfig:
                    '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    stat_prefix: "bookinfo"
                    route_config:
                      name: test
                      virtual_hosts:
                      - name: test
                        domains:
                        - "*"
                        routes:
                        - name: testroute
                          match: 
                            prefix: /
                          direct_response:
                            status: 200
                            body: 
                              inline_string: "prefix"
